<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/ten_dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold"
        android:text="@string/end_test"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:text="@string/do_u_want_submit_test"/>


    <TextView
        android:id="@+id/tv_end_test_submit"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_gravity="center"
        android:background="@drawable/submit_bg"
        android:textColor="@color/white_color"
        android:paddingLeft="@dimen/ten_dp"
        android:paddingRight="@dimen/ten_dp"
        android:gravity="center"
        android:paddingTop="@dimen/five_dp"
        android:paddingBottom="@dimen/five_dp"
        android:text="@string/submit"/>

    <TextView
        android:id="@+id/tv_end_test_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_gravity="center"
        android:padding="@dimen/five_dp"
        android:textSize="@dimen/fifteen_sp"
        android:textStyle="bold"
        android:text="@string/cancel"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
