<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddFeedBackActivity">

    <include layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/ed_feed_back_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:background="@drawable/take_exam_bg"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:padding="@dimen/ten_dp" />

    <EditText
        android:id="@+id/ed_feed_back_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:background="@drawable/take_exam_bg"
        android:hint="@string/subject"
        android:minHeight="48dp"
        android:padding="@dimen/ten_dp"
        android:textColorHint="#1976D2" />

    <EditText
        android:id="@+id/ed_feed_back_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:background="@drawable/take_exam_bg"
        android:hint="@string/description"
        android:minHeight="48dp"
        android:padding="@dimen/ten_dp"
        android:textColorHint="#1976D2" />


    <Button
        android:id="@+id/btn_feed_back_send"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/analysis_bg"
        android:textColor="@color/white_color"
        android:layout_gravity="center"
        android:text="@string/send"/>

</LinearLayout>