<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC4786FF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/five_dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="@dimen/hundred_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="@dimen/twenty_sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/app_title"/>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginLeft="@dimen/twenty_five_dp"
            android:layout_marginRight="@dimen/twenty_five_dp"
            app:cardElevation="@dimen/fifteen_dp"
            app:cardCornerRadius="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ed_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM ,.:;'@  "
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/fifteen_dp"
                    android:paddingLeft="@dimen/ten_dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/two_dp"
                    android:background="@color/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fifteen_dp"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent"
                        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM ,.:;'@"
                        android:hint="@string/password"/>

                    <ImageView
                        android:id="@+id/img_login_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="@dimen/ten_dp"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:src="@drawable/eye_on"
                        app:tint="@color/colorPrimary" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_login_forgot_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginRight="@dimen/thirty_dp"
            android:textColor="@color/white_color"
            android:textStyle="bold"
            android:text="@string/forgot_pwd" />


        <TextView
            android:id="@+id/tv_login_now"
            android:layout_width="@dimen/two_hundred_dp"
            android:layout_height="@dimen/thirty_dp"
            android:background="@drawable/login_now_bg"
            android:paddingBottom="@dimen/five_dp"
            android:paddingTop="@dimen/five_dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/twenty_dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/login_now"/>


        <LinearLayout
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <View
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="@dimen/one_dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:textStyle="bold"
                android:textSize="@dimen/thirteen_sp"
                android:text="Or Connet With"/>


            <View
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="@dimen/one_dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white_color"/>


        </LinearLayout>


        <RelativeLayout
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:layout_marginRight="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="@dimen/one_fifty_dp"
                android:layout_height="@dimen/thirty_five_dp"
                android:background="@drawable/facebook_border"
                android:drawableLeft="@drawable/facebook"
                android:drawableTint="@color/white_color"
                android:paddingLeft="@dimen/twenty_five_dp"
                android:paddingRight="@dimen/ten_dp"
                android:text="@string/login_facebook"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/fifteen_sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="@dimen/one_fifty_dp"
                android:layout_height="@dimen/thirty_five_dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/google_plus_border"
                android:drawableLeft="@drawable/google"
                android:drawableTint="@color/white_color"
                android:paddingLeft="@dimen/twenty_five_dp"
                android:text="@string/login_google"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/fifteen_sp"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_create_account"
            android:layout_margin="@dimen/twenty_five_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_color"
                android:text="@string/do_not_have_acc"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                android:text="@string/register"/>


        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/privacy_policy"/>

</RelativeLayout>