<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_settings_update">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_settings_update"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/exam_cat"
                    android:textColor="@color/indigo_500"
                    android:textSize="@dimen/eighteen_sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_settings_exam_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/ten_dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/lms_cat"
                    android:textColor="@color/indigo_500"
                    android:textSize="@dimen/eighteen_sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_settings_lms_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/ten_dp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_settings_update"
            android:layout_width="@dimen/two_hundred_dp"
            android:layout_height="@dimen/thirty_five_dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/ten_dp"
            android:background="@drawable/update_profile_bg"
            android:text="@string/update_settings"
            android:textColor="@color/white_color"
            android:textSize="@dimen/twelve_sp"
            android:visibility="gone" />

    </RelativeLayout>


</LinearLayout>